--- a/carrito_de_compras.html
+++ b/carrito_de_compras.html
@@ -40,5 +40,17 @@
             </tbody>
         </table>
     </div>
+    <br>
+    <div>
+        <table >
+            <tbody with="1000px" style="margin-right: 100%;">
+                <tr>
+                    <td>TOTAL</td>
+                    <td style="border-collapse: collapse; border: 1px solid black;">$10000</td>
+                </tr>
+            </tbody>
+            
+        </table>
+    </div>
 </body>
 </html>
