--- a/diego/inicio_cliente.html
+++ b/diego/inicio_cliente.html
@@ -35,7 +35,7 @@
 						<li><a href="#">Inicio</a></li>
 						<li><a href="#">Nosotros</a></li>
 						<li><a href="#">Mis datos</a></li>
-						<li><a href="#">Mis compras</a></li>					
+						<li><a href="mis_compras.html">Mis compras</a></li>					
 						<li><a href="#">Carrito</a></li>
 						<li><a href="#">Cerrar sesión</a></li>		
 					</ul>
