front end hecho

--- a/carrito_de_compras.html
+++ b/carrito_de_compras.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito de compras</title>
+    <link rel="stylesheet" href="/mystyle.css">
 </head>
 <body>
     <div>
@@ -41,16 +42,9 @@
         </table>
     </div>
     <br>
-    <div>
-        <table >
-            <tbody with="1000px" style="margin-right: 100%;">
-                <tr>
-                    <td>TOTAL</td>
-                    <td style="border-collapse: collapse; border: 1px solid black;">$10000</td>
-                </tr>
-            </tbody>
-            
-        </table>
+    <div class="total" style="display: flex; margin-left: 80%; margin-right: 20%;">
+        <div style="margin: 5px; height: 20px;">TOTAL&nbsp;</div>
+        <div style="border-collapse: collapse; border: 1px solid black; height: 20px;">&nbsp;$10000&nbsp;&nbsp;</div>
     </div>
 </body>
 </html>
