--- a/login.html
+++ b/login.html
@@ -7,19 +7,53 @@
     <title>login</title>
 </head>
 <body>
-    <div style="width: 80% ;margin-left:auto ; margin-right: auto;">
+    <div style="text-align: center;">
+        <h1>
+            ingresar a la tienda
+        </h1>
+    </div>
+    <div>
         <form action="" method="get">
-            <table>
-                <tr>
-                    <td><label for="">correo</label></td>
-                    <td><input type="email" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td><label for="">contraseña</label></td>
-                    <td><input type="password" name="" id=""></td>
-                </tr>
-            </table>
+            <div style="margin-left:auto; margin-right: auto; border: 1px solid black; padding: 2cm; display: flex; width: 20%; text-align: center;">
+                <div>
+                    <label for="" style="padding-right: 30px;">correo</label>
+                    <input type="email" name="" id="" style="width: 6cm;">
+                    <br>
+                    <label for="" style="padding-right: 3px;">contraseña</label>
+                    <input type="password" name="" id="" style="width: 6cm;">
+                    <br>
+                    <br>
+                    <button type="submit" style="margin-left:auto; margin-right: auto">ingresar</button>
+                    <br>
+                    <br>
+                    <a href="">registrarse</a>
+                    &nbsp;
+                    &nbsp;
+                    <a href="">olvide mi contraseña</a>
+                </div>
+            </div>
         </form>
+        <div style="text-align: center;">
+            <br>
+            <br>
+            <a href="">presiona este link para simular que entraste como cliente</a>
+            <br>
+            <br>
+            <a href="">presiona este link para simular que entraste como administrador</a>
+        </div>
     </div>
 </body>
 </html>
+
+<!--
+            <table style="margin-left:auto ; margin-right: auto; border: 1px solid black; padding: 3cm;">
+                <tr>
+                    <td><label for="">correo</label></td>
+                    <td><input type="email" name="" id="" style="width: 6cm;"></td>
+                </tr>
+                <tr>
+                    <td><label for="">contraseña</label></td>
+                    <td><input type="password" name="" id="" style="width: 6cm;"></td>
+                </tr>
+            </table>
+-->
