--- a/login.html
+++ b/login.html
@@ -5,55 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
     <div style="text-align: center;">
         <h1>
-            ingresar a la tienda
+            Ingresar a la tienda
         </h1>
     </div>
-    <div>
-        <form action="" method="get">
-            <div style="margin-left:auto; margin-right: auto; border: 1px solid black; padding: 2cm; display: flex; width: 20%; text-align: center;">
-                <div>
-                    <label for="" style="padding-right: 30px;">correo</label>
-                    <input type="email" name="" id="" style="width: 6cm;">
-                    <br>
-                    <label for="" style="padding-right: 3px;">contraseña</label>
-                    <input type="password" name="" id="" style="width: 6cm;">
-                    <br>
-                    <br>
-                    <button type="submit" style="margin-left:auto; margin-right: auto">ingresar</button>
-                    <br>
-                    <br>
-                    <a href="">registrarse</a>
-                    &nbsp;
-                    &nbsp;
-                    <a href="">olvide mi contraseña</a>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <form action="test.php" method="post" id="login" name="login" style="margin:10px; padding: 10px; border: 1px solid black">
+                        <div class="form-group">
+                            <label for="" style="padding-right: 30px;">Correo</label>
+                            <input class="form-control" type="email" id="correo" name="correo" style="width: 5cm;" placeholder="ingrese su correo">
+                        </div>
+                        <div class="form-group">
+                            <label for="" style="padding-right: 3px;">Contraseña</label>
+                            <input class="form-control" type="password" id="password" name="password" style="width: 5cm;" placeholder="ingrese su contraseña">
+                        </div>
+                        <div>
+                            <button type="submit" style="margin-left:auto; margin-right: auto" id="validacion">ingresar</button>
+                        <div>
+                            <a href="">registrarse</a>
+                            &nbsp;
+                            &nbsp;
+                            <a href="">olvide mi contraseña</a>
+                        </div>
+                </form>
             </div>
-        </form>
-        <div style="text-align: center;">
-            <br>
-            <br>
-            <a href="">presiona este link para simular que entraste como cliente</a>
-            <br>
-            <br>
-            <a href="">presiona este link para simular que entraste como administrador</a>
+            <br><br><br>
+            <div style="text-align: center;">
+                <br>
+                <br>
+                <a href="">presiona este link para simular que entraste como cliente</a>
+                <br>
+                <br>
+                <a href="">presiona este link para simular que entraste como administrador</a>
+            </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js" integrity="sha512-37T7leoNS06R80c8Ulq7cdCDU5MNQBwlYoy1TX/WUsLFC2eYNqtKlV0QjH7r8JpG/S0GUMZwebnVFLPd6SU5yg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/validacion_login.js"></script>
 </body>
 </html>
-
-<!--
-            <table style="margin-left:auto ; margin-right: auto; border: 1px solid black; padding: 3cm;">
-                <tr>
-                    <td><label for="">correo</label></td>
-                    <td><input type="email" name="" id="" style="width: 6cm;"></td>
-                </tr>
-                <tr>
-                    <td><label for="">contraseña</label></td>
-                    <td><input type="password" name="" id="" style="width: 6cm;"></td>
-                </tr>
-            </table>
--->
