--- a/carrito_de_compras.html
+++ b/carrito_de_compras.html
@@ -1,32 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de compras</title>
-    <link rel="stylesheet" href="/mystyle.css">
-</head>
-<body>
-    <div>
-        <h1 style="margin-right: auto; margin-left: auto;">Carrito de compras</h1>
-        <br>
-        <br>
-        <table style="width: 80%; border: 1px solid black; border-collapse: collapse; margin-right: auto; margin-left: auto;">
-            <thead style="background-color: gray;">
-                <tr>
-                    <td>    </td>
-                    <td>Categoría</td>
-                    <td>Nombre producto</td>
-                    <td>Precio</td>
-                    <td>Desc suscritor</td>
-                    <td>Desc oferta</td>
-                    <td>Precio final</td>
-                    <td>Opciones</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr style="background-color: rgb(168, 164, 164);">
+	<head>
+		<meta charset="utf-8">
+		<title>Bootstrap E-commerce Templates</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+		<!--[if ie]><meta content='IE=8' http-equiv='X-UA-Compatible'/><![endif]-->
+		<!-- bootstrap -->
+		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">      
+		<link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">		
+		<link href="themes/css/bootstrappage.css" rel="stylesheet"/>
+		
+		<!-- global styles -->
+		<link href="themes/css/flexslider.css" rel="stylesheet"/>
+		<link href="themes/css/main.css" rel="stylesheet"/>
+
+		<!-- scripts -->
+		<script src="themes/js/jquery-1.7.2.min.js"></script>
+		<script src="bootstrap/js/bootstrap.min.js"></script>				
+		<script src="themes/js/superfish.js"></script>	
+		<script src="themes/js/jquery.scrolltotop.js"></script>
+		<!--[if lt IE 9]>			
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+			<script src="themes/js/respond.min.js"></script>
+		<![endif]-->
+	</head>
+    <body>		
+		<div id="top-bar" class="container">
+			<div class="row">
+				<div class="span4">
+					<form method="POST" class="search_form">
+						<input type="text" class="input-block-level search-query" Placeholder="ej. comida para perros">
+					</form>
+				</div>
+				<div class="span8">
+					<div class="account pull-right">
+						<ul class="user-menu">				
+							<li><a href="historialCompra.html">Mi Cuenta</a></li>
+							<li><a href="register admin.html">Admin</a></li>
+							<li><a href="cart.html">Tu Carro</a></li>
+							<li><a href="index.html">Cerrar sesion</a></li>					
+							<li><a href="register.html">Iniciar sesion</a></li>				
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="wrapper" class="container">
+			<section class="navbar main-menu">
+				<div class="navbar-inner main-menu">				
+					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
+					<nav id="menu" class="pull-right">
+						<ul>
+							<li><a>Perros</a>					
+								<ul>
+									<li><a href="./alimentoPerro.html">Alimentos</a></li>									
+									<li><a href="./accesorioPerro.html">Accesorios</a></li>								
+								</ul>
+							</li>															
+							<li><a>Gatos</a>					
+								<ul>
+									<li><a href="./alimentoGato.html">Alimentos</a></li>									
+									<li><a href="./accesorioGato.html">Accesorios</a></li>								
+								</ul>
+							</li>							
+						</ul>
+					</nav>
+				</div>
+			</section>				
+			<section class="header_text sub">
+			<br>
+				<h4><span>Carrito</span></h4>
+			</section>
+			<section class="main-content">				
+				<div class="row">
+					<div class="span9">					
+						<h4 class="title"><span class="text"><strong>tus</strong> pedidos</span></h4>
+						<table class="table table-striped">
+							<thead>
+								<tr>
                     <td><input type="checkbox" id=""></td>
                     <td>Perro</td>
                     <td>Saco Royan Canin 3kg</td>
@@ -36,15 +88,138 @@
                     <td>$7.840</td>
                     <td>
                         <button>Eliminar</button>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                    <td><input type="checkbox" id=""></td>
+                    <td>Perro</td>
+                    <td>Hueso gris 3kg</td>
+                    <td>$1.260</td>
+                    <td>0%</td>
+                    <td>0%</td>
+                    <td>$1.000</td>
+                    <td>
+                        <button>Eliminar</button>
                     </td>
+                    <tr>
+                        <td><input type="checkbox" id=""></td>
+                        <td>Gatos</td>
+                        <td>Raton de juguete</td>
+                        <td>$1.000</td>
+                        <td>0%</td>
+                        <td>0%</td>
+                        <td>$1.000</td>
+                        <td>
+                            <button>Eliminar</button>
+                        </td>
+                    </tr>
                 </tr>
             </tbody>
         </table>
+        <h4>¿Qué le gustaría hacer despues?</h4>
+        <p>Elija si tiene codigos de descuento, pagar o simplemente estimar el precio de compra.</p>
+        <label class="radio">
+            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
+            Usar cupon
+        </label>
+        <label class="radio">
+            <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+            Precio normal
+        </label>
     </div>
     <br>
-    <div class="total" style="display: flex; margin-left: 80%; margin-right: 20%;">
-        <div style="margin: 5px; height: 20px;">TOTAL&nbsp;</div>
-        <div style="border-collapse: collapse; border: 1px solid black; height: 20px;">&nbsp;$10000&nbsp;&nbsp;</div>
+    <p class="cart-total right">
+    <div class="total">
+        <div>TOTAL&nbsp;<span>&nbsp;$10000&nbsp;&nbsp;</span></div>
     </div>
+    </p>
+    <div class="span3 col">
+        <div class="block">		
+            <ul class="nav nav-list">
+                <li class="nav-header">SUB CATEGORIAS</li>
+                <li><a href="products.html">Medicinas</a></li>
+                <li class="active"><a href="products.html">Limpieza de mascotas</a></li>
+                <li><a href="products.html">Comida para mascotas</a></li>
+            </ul>
+        </div>
+        <div class="block">
+            <h4 class="title">
+                <span class="pull-left"><span class="text">Productos</span></span>
+                <span class="pull-right">
+                    <a class="left button" href="#myCarousel" data-slide="prev"></a><a class="right button" href="#myCarousel" data-slide="next"></a>
+                </span>
+            </h4>
+            <div id="myCarousel" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="active item">
+                        <ul class="thumbnails listing-products">
+                            <li class="span3">
+                                <div class="product-box">
+                                    <span class="sale_tag"></span>												
+                                    <a href="product_detail.html"><img alt="" src="themes/images/farmacia/pro7.jpg"></a><br/>
+                                    <a href="product_detail.html" class="title">Fusce id molestie massa</a><br/>
+                                    <a href="#" class="category">Suspendisse aliquet</a>
+                                    <p class="price">$261</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <ul class="thumbnails listing-products">
+                            <li class="span3">
+                                <div class="product-box">												
+                                    <a href="product_detail.html"><img alt="" src="themes/images/farmacia/pro8.jpg"></a><br/>
+                                    <a href="product_detail.html" class="title">Tempor sem sodales</a><br/>
+                                    <a href="#" class="category">Urna nec lectus mollis</a>
+                                    <p class="price">$134</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</section>			
+<section id="footer-bar">
+<div class="row">
+    <div class="span3">
+        <h4>Navegar</h4>
+        <ul class="nav">
+            <li><a href="./index.html">Inicio</a></li>  
+            <li><a href="./about.html">Sobre nosotros</a></li>
+            <li><a href="./contact.html">Contactanos</a></li>
+            <li><a href="./cart.html">Carrito</a></li>
+            <li><a href="./register.html">Inicio de sesion</a></li>							
+        </ul>					
+    </div>
+    <div class="span4">
+        <h4>Mi cuenta</h4>
+        <ul class="nav">
+            <li><a href="#">Mi cuenta</a></li>
+            <li><a href="#">Historial de pedidos</a></li>
+            <li><a href="#">Lista de deseos</a></li>
+            <li><a href="#">Novedades</a></li>
+        </ul>
+    </div>
+    <div class="span5">
+        <p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
+        <p>Shopper es la tienda online más completa para mascotas creada por pet lovers para pet lovers!. Somos la tienda en línea de mascotas con mayor variedad de productos y servicios a domicilio de Latinoamérica (Colombia, Chile y México), contamos con más de 4.000 productos (alimentos, dietas naturales, snacks, medicinas, higiene y accesorios) y próximamente, más de 17 servicios como (medicina veterinaria prepagada, veterinario a domicilio, vacunación, baños, funeraria, entrenador, cuidadores, información de colegios, fundaciones, entre otros.</p>
+        <br/>
+        <span class="social_icons">
+            <a class="facebook" href="#">Facebook</a>
+            <a class="twitter" href="#">Twitter</a>
+            <a class="skype" href="#">Skype</a>
+            <a class="vimeo" href="#">Vimeo</a>
+        </span>
+    </div>					
+</div>	
+</section>
+<section id="copyright">
+<span>Copyright 2013 bootstrappage template  All right reserved.</span>
+</section>
+</div>
 </body>
 </html>
