--- a/login.html
+++ b/login.html
@@ -5,51 +5,156 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <!--[if ie]><meta content='IE=8' http-equiv='X-UA-Compatible'/><![endif]-->
+    <!-- bootstrap -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">      
+    <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">		
+    <link href="themes/css/bootstrappage.css" rel="stylesheet"/>
+    
+    <!-- global styles -->
+    <link href="themes/css/flexslider.css" rel="stylesheet"/>
+    <link href="themes/css/main.css" rel="stylesheet"/>
+
+    <!-- scripts -->
+    <script src="themes/js/jquery-1.7.2.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>				
+    <script src="themes/js/superfish.js"></script>	
+    <script src="themes/js/jquery.scrolltotop.js"></script>
 </head>
 <body>
-    <div style="text-align: center;">
-        <h1>
-            Ingresar a la tienda
-        </h1>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <form action="test.php" method="post" id="login" name="login" style="margin:10px; padding: 10px; border: 1px solid black">
-                        <div class="form-group">
-                            <label for="" style="padding-right: 30px;">Correo</label>
-                            <input class="form-control" type="email" id="correo" name="correo" style="width: 5cm;" placeholder="ingrese su correo">
-                        </div>
-                        <div class="form-group">
-                            <label for="" style="padding-right: 3px;">Contraseña</label>
-                            <input class="form-control" type="password" id="password" name="password" style="width: 5cm;" placeholder="ingrese su contraseña">
-                        </div>
-                        <div>
-                            <button type="submit" style="margin-left:auto; margin-right: auto" id="validacion">ingresar</button>
-                        <div>
-                            <a href="">registrarse</a>
-                            &nbsp;
-                            &nbsp;
-                            <a href="">olvide mi contraseña</a>
-                        </div>
-                </form>
-            </div>
-            <br><br><br>
+    <body>		
+		<div id="top-bar" class="container">
+			<div class="row">
+				<div class="span4">
+					<form method="POST" class="search_form">
+						<input type="text" class="input-block-level search-query" Placeholder="ej. comida para perros">
+					</form>
+				</div>
+				<div class="span8">
+					<div class="account pull-right">
+						<ul class="user-menu">				
+							<li><a href="historialCompra.html">Mi Cuenta</a></li>
+							<li><a href="register admin.html">Admin</a></li>
+							<li><a href="cart.html">Tu Carro</a></li>
+							<li><a href="index.html">Cerrar sesion</a></li>					
+							<li><a href="register.html">Iniciar sesion</a></li>			
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="wrapper" class="container">
+			<section class="navbar main-menu">
+				<div class="navbar-inner main-menu">				
+					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
+					<nav id="menu" class="pull-right">
+						<ul>
+							<li><a>Perros</a>					
+								<ul>
+									<li><a href="./alimentoPerro.html">Alimentos</a></li>									
+									<li><a href="./accesorioPerro.html">Accesorios</a></li>								
+								</ul>
+							</li>															
+							<li><a>Gatos</a>					
+								<ul>
+									<li><a href="./alimentoGato.html">Alimentos</a></li>									
+									<li><a href="./accesorioGato.html">Accesorios</a></li>								
+								</ul>
+							</li>							
+						</ul>
+					</nav>
+				</div>
+			</section>			
+			<section class="header_text sub">
+			<br>
             <div style="text-align: center;">
-                <br>
-                <br>
-                <a href="">presiona este link para simular que entraste como cliente</a>
-                <br>
-                <br>
-                <a href="">presiona este link para simular que entraste como administrador</a>
+                <h1>
+                    Ingresar a la tienda
+                </h1>
             </div>
+			</section>			
+			<section class="main-content">				
+				<div class="row">
+					<div class="span6">
+						<form action="#" method="post">
+							<input type="hidden" name="next" value="/">
+							<fieldset>
+								<div class="control-group">
+									<label class="control-label">Correo</label>
+									<div class="controls">
+										<input type="text" placeholder="ingresa tu usuario" id="username" class="input-xlarge">
+									</div>
+								</div>
+								<div class="control-group">
+									<label class="control-label">Contraseña</label>
+									<div class="controls">
+										<input type="password" placeholder="ingresa tu contraseña" id="password" class="input-xlarge">
+									</div>
+								</div>
+								<div class="control-group">
+									<input tabindex="3" class="btn btn-inverse large" type="submit" value="ingresar">
+									<hr>
+									<a tabindex="4" href="#" title="Registrate">registrate</a>
+                                    &nbsp;
+                                    &nbsp;
+                                    <a href="">olvide mi contraseña</a>
+								</div>
+							</fieldset>
+						</form>				
+					</div>
+                </div>
+                <br><br><br>
+                <div style="text-align: center;">
+                    <br>
+                    <br>
+                    <a href="">presiona este link para simular que entraste como cliente</a>
+                    <br>
+                    <br>
+                    <a href="">presiona este link para simular que entraste como administrador</a>
+                </div>
+            </section>			
+			<section id="footer-bar">
+				<div class="row">
+					<div class="span3">
+						<h4>Navegar</h4>
+						<ul class="nav">
+							<li><a href="./index.html">Inicio</a></li>  
+							<li><a href="./about.html">Sobre nosotros</a></li>
+							<li><a href="./contact.html">Contactanos</a></li>
+							<li><a href="./cart.html">Carrito</a></li>
+							<li><a href="./register.html">Inicio de sesion</a></li>							
+						</ul>					
+					</div>
+					<div class="span4">
+						<h4>Mi cuenta</h4>
+						<ul class="nav">
+							<li><a href="#">Mi cuenta</a></li>
+							<li><a href="#">Historial de pedidos</a></li>
+							<li><a href="#">Lista de deseos</a></li>
+							<li><a href="#">Novedades</a></li>
+						</ul>
+					</div>
+					<div class="span5">
+						<p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
+						<p>Shopper es la tienda online más completa para mascotas creada por pet lovers para pet lovers!. Somos la tienda en línea de mascotas con mayor variedad de productos y servicios a domicilio de Latinoamérica (Colombia, Chile y México), contamos con más de 4.000 productos (alimentos, dietas naturales, snacks, medicinas, higiene y accesorios) y próximamente, más de 17 servicios como (medicina veterinaria prepagada, veterinario a domicilio, vacunación, baños, funeraria, entrenador, cuidadores, información de colegios, fundaciones, entre otros.</p>
+						<br/>
+						<span class="social_icons">
+							<a class="facebook" href="#">Facebook</a>
+							<a class="twitter" href="#">Twitter</a>
+							<a class="skype" href="#">Skype</a>
+							<a class="vimeo" href="#">Vimeo</a>
+						</span>
+					</div>					
+				</div>	
+			</section>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js" integrity="sha512-37T7leoNS06R80c8Ulq7cdCDU5MNQBwlYoy1TX/WUsLFC2eYNqtKlV0QjH7r8JpG/S0GUMZwebnVFLPd6SU5yg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/validacion_login.js"></script>
 </body>
 </html>
+
+<!--
+
+-->
