--- a/registro.html
+++ b/registro.html
@@ -1,52 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de cliente</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+	<head>
+		<meta charset="utf-8">
+		<title>Bootstrap E-commerce Templates</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+		<!--[if ie]><meta content='IE=8' http-equiv='X-UA-Compatible'/><![endif]-->
+		<!-- bootstrap -->
+		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">      
+		<link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">		
+		<link href="themes/css/bootstrappage.css" rel="stylesheet"/>
+		
+		<!-- global styles -->
+		<link href="themes/css/flexslider.css" rel="stylesheet"/>
+		<link href="themes/css/main.css" rel="stylesheet"/>
+
+		<!-- scripts -->
+		<script src="themes/js/jquery-1.7.2.min.js"></script>
+		<script src="bootstrap/js/bootstrap.min.js"></script>				
+		<script src="themes/js/superfish.js"></script>	
+		<script src="themes/js/jquery.scrolltotop.js"></script>
+		<!--[if lt IE 9]>			
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+			<script src="js/respond.min.js"></script>
+		<![endif]-->
+	</head>
+    <body>		
+		<div id="top-bar" class="container">
+			<div class="row">
+				<div class="span4">
+					<form method="POST" class="search_form">
+						<input type="text" class="input-block-level search-query" Placeholder="ej. comida para perros">
+					</form>
+				</div>
+				<div class="span8">
+					<div class="account pull-right">
+						<ul class="user-menu">				
+							<li><a href="historialCompra.html">Mi Cuenta</a></li>
+							<li><a href="register admin.html">Admin</a></li>
+							<li><a href="cart.html">Tu Carro</a></li>
+							<li><a href="index.html">Cerrar sesion</a></li>					
+							<li><a href="register.html">Iniciar sesion</a></li>			
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="wrapper" class="container">
+			<section class="navbar main-menu">
+				<div class="navbar-inner main-menu">				
+					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
+					<nav id="menu" class="pull-right">
+						<ul>
+							<li><a>Perros</a>					
+								<ul>
+									<li><a href="./alimentoPerro.html">Alimentos</a></li>									
+									<li><a href="./accesorioPerro.html">Accesorios</a></li>								
+								</ul>
+							</li>															
+							<li><a>Gatos</a>					
+								<ul>
+									<li><a href="./alimentoGato.html">Alimentos</a></li>									
+									<li><a href="./accesorioGato.html">Accesorios</a></li>								
+								</ul>
+							</li>							
+						</ul>
+					</nav>
+				</div>
+			</section>			
+			<section class="header_text sub">
+			<br>
     <div class="container">
         <div class="row borde-bootstrap-row">
             <h4>Formulario de Registro</h4>
         </div>
         <br>
-        <form class="borde-bootstrap-row" action="registro.php" method="post" name="registro" id="registro">
+        <form class="form-stacked" action="registro.php" method="post" name="registro" id="registro">
             <div class="row borde-bootstrap-row">
                 <div class="col-sm-6">
                     <div class="form-group">
-                        <label for="rut">RUT</label>
-                        <input class="form-control" type="text" name="rut" id="rut" 
+                        <label for="rut" class="control-label">RUT</label>
+                        <div class="controls">
+                            <input class="form-control" type="text" name="rut" id="rut" 
                             aria-describedby="rut-help" placeholder="Ingresa tu RUT">
+                        </div>
                         <small id="rut-help" class="form-text text-muted">
                             Escribe tu RUT sin puntos y con guión, por ejemplo: 16560241-2
                         </small>
                     </div>
                     <div class="form-group">
-                        <label for="nombres">Nombres</label>
+                        <label for="nombres" class="control-label">Nombres</label>
+                        <div class="controls">
                         <input class="form-control" type="text" name="nombres" id="nombres" 
                             placeholder="Escribe aquí tus nombres">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="apellidos">Apellidos</label>
+                        <label for="apellidos" class="control-label">Apellidos</label>
+                        <div class="controls">
                         <input class="form-control" type="text" name="apellidos" id="apellidos" 
                             placeholder="Escribe aquí tus apellidos">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="correo">Correo</label>
+                        <label for="correo" class="control-label">Correo</label>
+                        <div class="controls">
                         <input class="form-control" type="email" name="correo" id="correo" 
                             aria-describedby="correo-help" placeholder="Escribe aquí tu correo">
+                        </div>
                         <small id="correo-help" class="form-text text-muted">
                             Escribe tu correo incluyendo: nombre, @ y dominio, por ejemplo: atorres@duocuc.cl
                         </small>
                     </div>
                     <div class="form-group">
-                        <label for="direccion">Dirección</label>
+                        <label for="direccion" class="control-label">Dirección</label>
+                        <div class="controls">
                         <textarea class="form-control" name="direccion" id="direccion" cols="60" rows="5" 
                             aria-describedby="direccion-help"placeholder="Escribe aquí tu dirección"></textarea>
+                        </div>
                         <small id="direccion-help" class="form-text text-muted">
                             Escribe tu direción completa con: calle, número, comuna y región
                         </small>
@@ -62,18 +133,22 @@
                     </div>
                     <div class="form-group">
                         <br>
-                        <label for="password">Contraseña</label>
+                        <label for="password" class="control-label">Contraseña</label>
+                        <div class="controls">
                         <input class="form-control" type="password" name="password" id="password" 
                             aria-describedby="password-help" placeholder="Escribe aquí tu contraseña">
+                        </div>
                         <small id="password-help" class="form-text text-muted">
                             La contraseña debe tener un mínimo de 10 caracteres y 
                             debe contener al menos una mayúscula y un número
                         </small>
                     </div>
                     <div class="form-group">
-                        <label for="password2">Repetir contraseña</label>
+                        <label for="password2" class="control-label">Repetir contraseña</label>
+                        <div class="controls">
                         <input class="form-control" type="password" name="password2" id="password2" 
                             placeholder="Repite aquí tu contraseña">
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
@@ -89,13 +164,47 @@
                 &nbsp;&nbsp;&nbsp;
                 <button type="reset" class="btn btn-secondary">Limpiar</button>
             </div>
-        </form>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js" integrity="sha512-37T7leoNS06R80c8Ulq7cdCDU5MNQBwlYoy1TX/WUsLFC2eYNqtKlV0QjH7r8JpG/S0GUMZwebnVFLPd6SU5yg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+            <hr>
+            <div class="actions"><input tabindex="9" class="btn btn-inverse large" type="submit" value="Create your account"></div>
+        </fieldset>
+    </form>					
+</div>				
+</div>
+</section>			
+<section id="footer-bar">
+<div class="row">
+<div class="span3">
+    <h4>Navegar</h4>
+    <ul class="nav">
+        <li><a href="./index.html">Inicio</a></li>  
+        <li><a href="./about.html">Sobre nosotros</a></li>
+        <li><a href="./contact.html">Contactanos</a></li>
+        <li><a href="./cart.html">Carrito</a></li>
+        <li><a href="./register.html">Inicio de sesion</a></li>							
+    </ul>					
+</div>
+<div class="span4">
+    <h4>Mi cuenta</h4>
+    <ul class="nav">
+        <li><a href="#">Mi cuenta</a></li>
+        <li><a href="#">Historial de pedidos</a></li>
+        <li><a href="#">Lista de deseos</a></li>
+        <li><a href="#">Novedades</a></li>
+    </ul>
+</div>
+<div class="span5">
+    <p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
+    <p>Shopper es la tienda online más completa para mascotas creada por pet lovers para pet lovers!. Somos la tienda en línea de mascotas con mayor variedad de productos y servicios a domicilio de Latinoamérica (Colombia, Chile y México), contamos con más de 4.000 productos (alimentos, dietas naturales, snacks, medicinas, higiene y accesorios) y próximamente, más de 17 servicios como (medicina veterinaria prepagada, veterinario a domicilio, vacunación, baños, funeraria, entrenador, cuidadores, información de colegios, fundaciones, entre otros.</p>
+    <br/>
+    <span class="social_icons">
+        <a class="facebook" href="#">Facebook</a>
+        <a class="twitter" href="#">Twitter</a>
+        <a class="skype" href="#">Skype</a>
+        <a class="vimeo" href="#">Vimeo</a>
+    </span>
+</div>					
+</div>
+</div>
     <script src="js/validacion-formularios.js"></script>
 </body>
 </html>
