arreglos pagina detalle factura y mis compras

--- a/inicio_cliente.html
+++ b/inicio_cliente.html
@@ -31,8 +31,8 @@
 			
 			<div class="row container-fluid">
 					<ul class="user-menu">
-						<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
-						<li><a href="#">Inicio</a></li>
+						<a href="inicio_cliente.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
+						<li><a href="inicio_cliente.html">Inicio</a></li>
 						<li><a href="#">Nosotros</a></li>
 						<li><a href="#">Mis datos</a></li>
 						<li><a href="mis_compras.html">Mis compras</a></li>					
