--- a/detalle_factura.html
+++ b/detalle_factura.html
@@ -32,7 +32,7 @@
 			
 			<div class="row container-fluid">
 					<ul class="user-menu">
-						<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
+						<a href="inicio_cliente.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
 						<li><a href="inicio_cliente.html">Inicio</a></li>
 						<li><a href="#">Nosotros</a></li>
 						<li><a href="#">Mis datos</a></li>
@@ -42,51 +42,71 @@
 					</ul>
 			</div>
 		</div>
-        <div class="row tabla">
-            <div class="col">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Nro Factura</th>
-                            <th>Fecha</th>
-                            <th>Monto Total</th>
-                            <th>Estado Actual</th>
-                            <th>Opciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th>425</th>
-                            <th>1/1/2022</th>
-                            <th>$15.000</th>
-                            <th>Entregado</th>
-                            <th><a href="detalle_factura.html">Ver detalle</a></th>
-                        </tr>
-                        <tr>
-                            <th>535</th>
-                            <th>5/2/2022</th>
-                            <th>$10.000</th>
-                            <th>Despachado</th>
-                            <th><a href="#">Ver detalle</a></th>
-                        </tr>
-                        <tr>
-                            <th>675</th>
-                            <th>7/3/2022</th>
-                            <th>$12.000</th>
-                            <th>En bodega</th>
-                            <th><a href="#">Ver detalle</a></th>
-                        </tr>
-                        <tr>
-                            <th>734</th>
-                            <th>2/4/2022</th>
-                            <th>$7.000</th>
-                            <th>Entregado</th>
-                            <th><a href="#">Ver detalle</a></th>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+		<div class="container">
+			<div class="row tituloDetaller">
+				<div class="span7">
+					<h4><span class="text">Detalle de Factura 425</span></h4>
+				</div>
+				<div class="span4">
+					<img src="themes/images/seguimientos.png" alt="">
+				</div>
+			</div>
+			<div class="tabla">
+				<div class="col">
+					<table class="table table-bordered">
+						<thead>
+							<tr>
+								<th>ID</th>
+								<th>Categoria</th>
+								<th>Nombre Producto</th>
+								<th>Precio</th>
+								<th>% Desc Suscriptor</th>
+								<th>% Desc Oferta</th>
+								<th>Precio Final</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<th>425</th>
+								<th>Perros</th>
+								<th>Saco Royal Canin 3kg</th>
+								<th>$ 8.000</th>
+								<th>0%</th>
+								<th>2%</th>
+								<th>$7.840</th>
+							</tr>
+							<tr>
+								<th>425</th>
+								<th>Perros</th>
+								<th>Hueso Gris 3kg</th>
+								<th>$ 1.260</th>
+								<th>0%</th>
+								<th>0%</th>
+								<th>$1.260</th>
+							</tr>
+							<tr>
+								<th>425</th>
+								<th>Perros</th>
+								<th>Pelota de Juguete</th>
+								<th>$ 1.000</th>
+								<th>0%</th>
+								<th>0%</th>
+								<th>$1.000</th>
+							</tr>
+							<tr>
+								<th></th>
+								<th></th>
+								<th></th>
+								<th></th>
+								<th></th>
+								<th>Total</th>
+								<th>$10.000</th>	
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
 		<div id="wrapper" class="container">
 			<section class="our_client">
 				<h4 class="title"><span class="text">Manufactures</span></h4>
