--- a/registro.html
+++ b/registro.html
@@ -20,6 +20,7 @@
 		<script src="bootstrap/js/bootstrap.min.js"></script>				
 		<script src="themes/js/superfish.js"></script>	
 		<script src="themes/js/jquery.scrolltotop.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.4/jquery.validate.min.js" integrity="sha512-FOhq9HThdn7ltbK8abmGn60A/EMtEzIzv1rvuh+DqzJtSGq8BRdEN0U+j0iKEIffiw/yEtVuladk6rsG4X6Uqg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<!--[if lt IE 9]>			
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 			<script src="js/respond.min.js"></script>
@@ -35,12 +36,12 @@
 				</div>
 				<div class="span8">
 					<div class="account pull-right">
-						<ul class="user-menu">				
-							<li><a href="historialCompra.html">Mi Cuenta</a></li>
-							<li><a href="register admin.html">Admin</a></li>
-							<li><a href="cart.html">Tu Carro</a></li>
+						<ul class="user-menu">
+							<li><a href="mis_compras.html">Mi Cuenta</a></li>
+							<li><a href="login.html">Iniciar sesion</a></li>
+							<li><a href="carrito_de_compras.html">Tu Carro</a></li>
 							<li><a href="index.html">Cerrar sesion</a></li>					
-							<li><a href="register.html">Iniciar sesion</a></li>			
+							<li><a href="registro.html">registrarse</a></li>		
 						</ul>
 					</div>
 				</div>
@@ -77,7 +78,7 @@
         <br>
         <form class="form-stacked" action="registro.php" method="post" name="registro" id="registro">
             <div class="row borde-bootstrap-row">
-                <div class="col-sm-6">
+                <div class="span6">
                     <div class="form-group">
                         <label for="rut" class="control-label">RUT</label>
                         <div class="controls">
@@ -151,7 +152,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="span3">
                     <div class="form-group">
                         <img src="images/cristian_gomez.jpg" alt="" name="fotoperfil" id="fotoperfil">
                         <br><br>
