--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>				
     <script src="themes/js/superfish.js"></script>	
     <script src="themes/js/jquery.scrolltotop.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.4/jquery.validate.min.js" integrity="sha512-FOhq9HThdn7ltbK8abmGn60A/EMtEzIzv1rvuh+DqzJtSGq8BRdEN0U+j0iKEIffiw/yEtVuladk6rsG4X6Uqg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
     <body>		
@@ -34,12 +35,12 @@
 				</div>
 				<div class="span8">
 					<div class="account pull-right">
-						<ul class="user-menu">				
-							<li><a href="historialCompra.html">Mi Cuenta</a></li>
-							<li><a href="register admin.html">Admin</a></li>
-							<li><a href="cart.html">Tu Carro</a></li>
-							<li><a href="index.html">Cerrar sesion</a></li>					
-							<li><a href="register.html">Iniciar sesion</a></li>			
+						<ul class="user-menu">
+							<li><a href="mis_compras.html">Mi Cuenta</a></li>
+							<li><a href="login.html">Iniciar sesion</a></li>
+							<li><a href="carrito_de_compras.html">Tu Carro</a></li>
+							<li><a href="index.html">Cerrar sesion</a></li>
+							<li><a href="registro.html">registrarse</a></li>
 						</ul>
 					</div>
 				</div>
@@ -77,24 +78,25 @@
 			</section>			
 			<section class="main-content">				
 				<div class="row">
-					<div class="span6">
-						<form action="#" method="post">
+					<div class="span4"></div>
+					<div class="span4">
+						<form id="login" name="login" action="#" method="post">
 							<input type="hidden" name="next" value="/">
 							<fieldset>
 								<div class="control-group">
 									<label class="control-label">Correo</label>
 									<div class="controls">
-										<input type="text" placeholder="ingresa tu usuario" id="username" class="input-xlarge">
+										<input name="correo" id="correo" type="text" placeholder="ingresa tu usuario" id="username" class="input-xlarge">
 									</div>
 								</div>
 								<div class="control-group">
 									<label class="control-label">Contraseña</label>
 									<div class="controls">
-										<input type="password" placeholder="ingresa tu contraseña" id="password" class="input-xlarge">
+										<input name="constraseña" id="constraseña" type="password" placeholder="ingresa tu contraseña" id="password" class="input-xlarge">
 									</div>
 								</div>
 								<div class="control-group">
-									<input tabindex="3" class="btn btn-inverse large" type="submit" value="ingresar">
+									<button type="submit" class="btn btn-primary">ingresar</button>
 									<hr>
 									<a tabindex="4" href="#" title="Registrate">registrate</a>
                                     &nbsp;
@@ -109,10 +111,10 @@
                 <div style="text-align: center;">
                     <br>
                     <br>
-                    <a href="">presiona este link para simular que entraste como cliente</a>
+                    <a href="inicio_cliente.html">presiona este link para simular que entraste como cliente</a>
                     <br>
                     <br>
-                    <a href="">presiona este link para simular que entraste como administrador</a>
+                    <a href="main_administrador.html">presiona este link para simular que entraste como administrador</a>
                 </div>
             </section>			
 			<section id="footer-bar">
@@ -120,11 +122,9 @@
 					<div class="span3">
 						<h4>Navegar</h4>
 						<ul class="nav">
-							<li><a href="./index.html">Inicio</a></li>  
-							<li><a href="./about.html">Sobre nosotros</a></li>
-							<li><a href="./contact.html">Contactanos</a></li>
-							<li><a href="./cart.html">Carrito</a></li>
-							<li><a href="./register.html">Inicio de sesion</a></li>							
+                            <li><a href="./index.html">Inicio</a></li>
+                            <li><a href="./cart.html">Carrito</a></li>
+                            <li><a href="./register.html">Inicio de sesion</a></li>						
 						</ul>					
 					</div>
 					<div class="span4">
@@ -140,21 +140,10 @@
 						<p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
 						<p>Shopper es la tienda online más completa para mascotas creada por pet lovers para pet lovers!. Somos la tienda en línea de mascotas con mayor variedad de productos y servicios a domicilio de Latinoamérica (Colombia, Chile y México), contamos con más de 4.000 productos (alimentos, dietas naturales, snacks, medicinas, higiene y accesorios) y próximamente, más de 17 servicios como (medicina veterinaria prepagada, veterinario a domicilio, vacunación, baños, funeraria, entrenador, cuidadores, información de colegios, fundaciones, entre otros.</p>
 						<br/>
-						<span class="social_icons">
-							<a class="facebook" href="#">Facebook</a>
-							<a class="twitter" href="#">Twitter</a>
-							<a class="skype" href="#">Skype</a>
-							<a class="vimeo" href="#">Vimeo</a>
-						</span>
 					</div>					
 				</div>	
 			</section>
         </div>
-    </div>
     <script src="js/validacion_login.js"></script>
-</body>
+	</body>
 </html>
-
-<!--
-
--->
