--- a/inventario.html
+++ b/inventario.html
@@ -42,7 +42,7 @@
 			    <br>
 				<h2><span>Mantenedor de bodega</span></h2>
                 <div class="span5">
-					<table class="table table-striped" style="border: 3px; color: black;">
+					<table >
 						<tr>
 							<td><strong>ID:</strong></td>
 							<td><input type="text"  Placeholder=""></td>
@@ -90,7 +90,7 @@
 								Limpiar
 							</button>
 						</div>			
-						<table class="table table-bordered" style="border-collapse: 3px; color: black;">
+						<table class="table table-striped" style="border-collapse: 3px; color: black;">
 							<thead>
 								<tr>
 									<th>ID</th>
