--- a/inventario.html
+++ b/inventario.html
@@ -90,7 +90,7 @@
 								Limpiar
 							</button>
 						</div>			
-						<table class="table table-striped" style="border-collapse: 3px; color: black;">
+						<table class="table table-bordered" style="border-collapse: 3px; color: black;">
 							<thead>
 								<tr>
 									<th>ID</th>
