--- a/inicio_cliente.html
+++ b/inicio_cliente.html
@@ -33,11 +33,11 @@
 					<ul class="user-menu">
 						<a href="inicio_cliente.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>			
 						<li><a href="inicio_cliente.html">Inicio</a></li>
-						<li><a href="#">Nosotros</a></li>
+						<li><a href="sobre_nosotros.html">Nosotros</a></li>
 						<li><a href="#">Mis datos</a></li>
 						<li><a href="mis_compras.html">Mis compras</a></li>					
-						<li><a href="#">Carrito</a></li>
-						<li><a href="#">Cerrar sesión</a></li>		
+						<li><a href="carrito_de_compras.html">Carrito</a></li>
+						<li><a href="index.html">Cerrar sesión</a></li>		
 					</ul>
 			</div>
 		</div>
