--- a/carrito_de_compras.html
+++ b/carrito_de_compras.html
@@ -47,7 +47,7 @@
 			</div>
 		</div>
 		<div id="wrapper" class="container">				
-			<section class="header_text sub">
+			<section  class="header_text sub">
 			<br>
 				<h4><span>Carrito</span></h4>
 			</section>
@@ -100,7 +100,7 @@
                     </div>
                     <br>
                     <p class="cart-total right">
-                    <div class="total">
+                    <div class="span9">
                         <div>TOTAL&nbsp;<span>&nbsp;$10000&nbsp;&nbsp;</span></div>
                     </div>
                     </p>
