--- a/maestro_producto.html
+++ b/maestro_producto.html
@@ -94,7 +94,7 @@
 				<div class="row">
 					<div class="span9">	
 						<div class="col1">
-							<button class="btn" id="btn1.3" onclick="alert('Producto agregado');">
+							<button class="btn" id="btn1" onclick="alert('Producto agregado');">
 								Guardar
 							</button>
 							<button class="btn" id="btn2" onclick="alert('Producto creado');">
@@ -111,9 +111,9 @@
 									<th>Categoria</th>
 									<th>Nombre</th>
 									<th>Descripcion</th>
-									<th>Precio</th>
-									<th>Desc_sub</th>
-									<th>Desc_of</th>
+									<th>$Precio</th>
+									<th>%Descuento subscripción</th>
+									<th>%Descuento oferta</th>
 								</tr>
 							</thead>
 							<tbody id="rep">
