--- a/inventario.html
+++ b/inventario.html
@@ -80,7 +80,7 @@
 				<div class="row">
 					<div class="span9">	
 						<div class="col1">
-							<button class="btn" id="bton1" onclick="alert('Producto agregado');">
+							<button class="btn" id="btn1" onclick="alert('Producto agregado');">
 								Agregar
 							</button>
 							<button class="btn" id="btn2" onclick="alert('Producto creado');">
