--- a/maestro_usuario.html
+++ b/maestro_usuario.html
@@ -100,24 +100,27 @@
 				<div class="row">
 					<div class="span9">	
 						<div class="col1">
-							<button class="btn" id="btn1.2" onclick="alert('Producto agregado');">
+							<button class="btn" id="btn1" onclick="alert('Producto agregado');">
 								Guardar
 							</button>
 							<button class="btn" id="btn2" onclick="alert('Producto creado');">
 								Nuevo
 							</button>
 							<button class="btn" id="btn3" >
-								Eliminars
+								Eliminar
 							</button>
 						</div>			
 						<table class="table table-bordered" style="border-collapse: 1px;">
 							<thead>
 								<tr>
 									<th>ID</th>
-									<th>Categoria</th>
-									<th>Nombre</th>
-									<th>Estado</th>
-									<th>Opciones</th>
+									<th>Tipo usuario</th>
+									<th>Rut</th>
+									<th>Nombres</th>
+									<th>Apellidos</th>
+									<th>Direccion</th>
+									<th>Con subscripción</th>
+									<th>Imagen</th>
 								</tr>
 							</thead>
 							<tbody id="red">
