commit on master

--- a/carrito_de_compras.html
+++ b/carrito_de_compras.html
@@ -120,7 +120,7 @@
                         <h4>Mi cuenta</h4>
                         <ul class="nav">
                             <li><a href="#">Mi cuenta</a></li>
-                            <li><a href="#">Historial de pedidos</a></li>
+                            <li><a href="sobre_nosotros.html">Historial de pedidos</a></li>
                             <li><a href="#">Lista de deseos</a></li>
                             <li><a href="#">Novedades</a></li>
                         </ul>
