cambios en las paginas

--- a/carrito_de_compras.html
+++ b/carrito_de_compras.html
@@ -43,7 +43,7 @@
 		<div id="wrapper" class="container">				
 			<section  class="header_text sub">
 			<br>
-				<h4><span>Carrito</span></h4>
+				<h4><a>Carrito</a></h4>
 			</section>
 			<section class="main-content">				
 				<div class="row">
@@ -60,7 +60,7 @@
                                     <td>2%</td>
                                     <td>$7.840</td>
                                     <td>
-                                        <button>Eliminar</button>
+                                        <button><a>Eliminar</a></button>
                                     </td>
                                 </tr>
                             </thead>
@@ -74,7 +74,7 @@
                                     <td>0%</td>
                                     <td>$1.000</td>
                                     <td>
-                                        <button>Eliminar</button>
+                                        <button><a>Eliminar</a></button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -86,7 +86,7 @@
                                     <td>0%</td>
                                     <td>$1.000</td>
                                     <td>
-                                        <button>Eliminar</button>
+                                        <button><a>Eliminar</a></button>
                                     </td>
                                 </tr>
                             </tbody>
