--- a/registro_ventas.html
+++ b/registro_ventas.html
@@ -41,137 +41,67 @@
 			</div>
 		</div>
 		<div id="wrapper" class="container">
+			<div style="text-align: center;" class="span9">
+                <h1>
+                    <a>Registro de ventas</a>
+                </h1>
+            </div>
 			<br>
 			<div>
 				<section class="main-content">				
 					<div class="row">
 						<div class="span9">
-							<h1 >Boleta 1</h1>
 							<br>
 							<br>
 							<table style="width: 80%; border: 1px solid black; border-collapse: collapse; margin-right: auto; margin-left: auto;">
 								<thead style="background-color: gray;">
 									<tr>
-										<td>    </td>
-										<td>Categoría</td>
-										<td>Nombre producto</td>
-										<td>Precio</td>
-										<td>Desc suscritor</td>
-										<td>Desc oferta</td>
-										<td>Precio final</td>
+										<td>Nro Factura</td>
+										<td>Fecha</td>
+										<td>Nombre Cliente</td>
+										<td>Suscrito</td>
+										<td>Monto total</td>
+										<td>Estado Actual</td>
+										<td>Detalle</td>
+										<td>Cambiar estado</td>
+										<td></td>
 									</tr>
 								</thead>
 								<tbody>
 									<tr style="background-color: rgb(168, 164, 164);">
+										<td>425</td>
+										<td>5/10/2022</td>
+										<td>Juan Perez</td>
 										<td><input type="checkbox" id=""></td>
-										<td>Perro</td>
-										<td>Saco Royan Canin 3kg</td>
-										<td>$8.000</td>
-										<td>0%</td>
-										<td>2%</td>
-										<td>$7.840</td>
+										<td>$200000</td>
+										<td>Entregado</td>
+										<td><button style="width:min-content;"><a href="detalle_factura.html">detalle</a></button></td>
+										<td><button style="width:min-content;"><a>despachado</a></button><td><button style="width:min-content;"><a>entregado</a></button></td></td>
+									</tr>
+									<tr style="background-color: rgb(168, 164, 164);">
+										<td>425</td>
+										<td>5/10/2022</td>
+										<td>Juan Perez</td>
+										<td><input type="checkbox" id=""></td>
+										<td>$200000</td>
+										<td>Entregado</td>
+										<td><button style="width:min-content;"><a href="detalle_factura.html">detalle</a></button></td>
+										<td><button style="width:min-content;"><a>despachado</a></button><td><button style="width:min-content;"><a>entregado</a></button></td></td>
+									</tr>
+									<tr style="background-color: rgb(168, 164, 164);">
+										<td>425</td>
+										<td>5/10/2022</td>
+										<td>Juan Perez</td>
+										<td><input type="checkbox" id=""></td>
+										<td>$200000</td>
+										<td>Entregado</td>
+										<td><button style="width:min-content;"><a href="detalle_factura.html">detalle</a></button></td>
+										<td><button style="width:min-content;"><a>despachado</a></button><td><button style="width:min-content;"><a>entregado</a></button></td></td>
 									</tr>
 								</tbody>
-								<tbody>
-									<tr style="background-color: rgb(168, 164, 164);">
-										<td><input type="checkbox" id=""></td>
-										<td>Perro</td>
-										<td>Saco Royan Canin 3kg</td>
-										<td>$8.000</td>
-										<td>0%</td>
-										<td>2%</td>
-										<td>$7.840</td>
-									</tr>
-								</tbody>
-								<tbody>
-									<tr style="background-color: rgb(168, 164, 164);">
-										<td><input type="checkbox" id=""></td>
-										<td>Perro</td>
-										<td>Saco Royan Canin 3kg</td>
-										<td>$8.000</td>
-										<td>0%</td>
-										<td>2%</td>
-										<td>$7.840</td>
-									</tr>
-								</tbody>    
-							</table>
-						</div>
-						<br>
-						<div class="span9">
-							<br>
-							<table >
-								<tbody with="1000px" style="margin-right: 100%;">
-									<tr>
-										<td>TOTAL</td>
-										<td style="border-collapse: collapse; border: 1px solid black;">$23.520</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-						<div class="span9">
-							<h1 >Boleta 2</h1>
-							<br>
-							<br>
-							<table style="width: 80%; border: 1px solid black; border-collapse: collapse; margin-right: auto; margin-left: auto;">
-								<thead style="background-color: gray;">
-									<tr>
-										<td>    </td>
-										<td>Categoría</td>
-										<td>Nombre producto</td>
-										<td>Precio</td>
-										<td>Desc suscritor</td>
-										<td>Desc oferta</td>
-										<td>Precio final</td>
-									</tr>
-								</thead>
-								<tbody>
-									<tr style="background-color: rgb(168, 164, 164);">
-										<td><input type="checkbox" id=""></td>
-										<td>Perro</td>
-										<td>Saco Royan Canin 3kg</td>
-										<td>$8.000</td>
-										<td>0%</td>
-										<td>2%</td>
-										<td>$7.840</td>
-									</tr>
-								</tbody>
-								<tbody>
-									<tr style="background-color: rgb(168, 164, 164);">
-										<td><input type="checkbox" id=""></td>
-										<td>Perro</td>
-										<td>Saco Royan Canin 3kg</td>
-										<td>$8.000</td>
-										<td>0%</td>
-										<td>2%</td>
-										<td>$7.840</td>
-									</tr>
-								</tbody>
-								<tbody>
-									<tr style="background-color: rgb(168, 164, 164);">
-										<td><input type="checkbox" id=""></td>
-										<td>Perro</td>
-										<td>Saco Royan Canin 3kg</td>
-										<td>$8.000</td>
-										<td>0%</td>
-										<td>2%</td>
-										<td>$7.840</td>
-									</tr>
-								</tbody>    
 							</table>
 						</div>
 						<br>
-						<div class="span9">
-							<table >
-								<br>
-								<tbody with="1000px" style="margin-right: 100%;">
-									<tr>
-										<td>TOTAL</td>
-										<td style="border-collapse: collapse; border: 1px solid black;">$23.520</td>
-									</tr>
-								</tbody>
-								
-							</table>
-						</div>
 					</div>
 				</section>
 			</div>			
